# php-analyze

./: .gitignore  COMMENTS.md  Cargo.toml  README.md  REQUIREMENTS.md  REVIEW.md  SPECIFICATION.md
.github/workflows/: ci.yml
crates/php-analyze/: Cargo.toml
crates/php-analyze/benches/: README.md  recorder_hot_path.rs  recorder_workload.rs  workload_overhead.rs
crates/php-analyze/src/: bootstrap.rs  clocks.rs  config.rs  lib.rs  spike.rs  wire.rs
crates/php-analyze/src/recorder/: accounting.rs  dictionary.rs  dump.rs  flush.rs  mod.rs  observer.rs  types.rs
crates/php-analyze/src/shipper/: encode.rs  http.rs  mod.rs  on_batch.rs
crates/php-analyze/tests/: fpm_repeated_requests.rs  recorder_observer.rs  recorder_zero_alloc.rs  shipper_round_trip.rs  spike_observer.rs
crates/stub-ingest/: Cargo.toml  README.md
crates/stub-ingest/src/: main.rs
crates/stub-ingest/tests/: round_trip.rs
tests/php-bench/: flat_calls.php  json_batch.php  recursive_walk.php
tests/php-fpm/: README.md  fpm_repeated.php
tests/php-recorder/: cap_drops.php  deep_recursion.php  empty_request.php  flat_calls.php  nested.php  run.sh  skip_functions.php  threshold_flush.php  throws.php
tests/php-shipper/: connection_reuse.php  mshutdown_drain.php  noop.php  retry_exhaust.php
tests/php-spike/: internal_calls.php  run.sh  throws.php  user_calls.php
tools/: capture-fixtures.sh
tools/captured-batches/: README.md
tools/captured-batches/flat_calls/: README.md  batch-0001.msgpack  batch-0002.msgpack  batch-0003.msgpack  batch-0054.msgpack
tools/captured-batches/json_batch/: README.md  batch-0001.msgpack  batch-0002.msgpack  batch-0003.msgpack  batch-0011.msgpack
tools/captured-batches/recursive_walk/: README.md  batch-0001.msgpack  batch-0002.msgpack  batch-0003.msgpack  batch-0025.msgpack
tools/xdebug-spot-check/: .gitignore  README.md  REPORT.md  compare.py  run.sh
