[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/kalaspuffar/php-analyze"
version = "0.1.0"
authors = ["Daniel Persson"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# Treat clippy::pedantic as opt-in per-call-site; default profile is stable + correctness.
# CI promotes warnings to errors via `-D warnings`.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
