[package]
name = "php-analyze"
description = "PHP function-call tracing extension (cdylib loaded into PHP 8.3/8.4)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
# rlib is kept so `cargo test -p php-analyze` can link the test harness;
# the operator-facing artifact is libphp_analyze.so from the cdylib output.

[dependencies]
# `observer` feature is OFF by default upstream; it activates
# `ModuleBuilder::fcall_observer` plus the `FcallObserver` / `FcallInfo`
# surface in `ext_php_rs::zend`. The Phase-0 spike registers an observer
# through that wrapper; Phase 2's Recorder will likely use the same path.
# No new crate is added here — only the feature list of an existing dep.
ext-php-rs = { version = "=0.15.13", features = ["observer"] }
# `secrecy` wraps the bearer token in a `SecretString` with redacted `Debug`
# and no `Display` (§6.3 of `SPECIFICATION.md`).
secrecy = "0.10"
# `thiserror` powers the `ConfigError` enum.
thiserror = "2"
# `url` parses and validates `server_url` (must be `http://` or `https://`).
url = "2"
# `rustc_hash::FxHashMap` is the hash builder for the recorder's
# function dictionary (`recorder::dictionary::Dictionary`). Small
# composite keys, trusted inputs — SipHash's DoS resistance is wasted
# and its cost is measurable. We use `rustc-hash` (the rust-lang
# maintained fork of the older `fxhash` crate) because it has zero
# transitive dependencies; the older `fxhash` pulls `byteorder`.
rustc-hash = "2"
# `libc` exposes `clock_gettime`, `getrusage`, `CLOCK_MONOTONIC`,
# `CLOCK_REALTIME`, `RUSAGE_SELF`, and `timeval` — everything the
# recorder's clock primitives need. `libc` is already a transitive dep
# (build-dep of `ext-php-rs-bindgen`), so listing it directly costs zero
# new crates in the lockfile. `ext-php-rs::ffi` only re-exports Zend
# types, not POSIX clock symbols.
libc = "0.2"
# `serde` + `rmp-serde` are Phase 3 additions: the `wire` module derives
# `Serialize`/`Deserialize` on the §4.2 MessagePack schema types, and
# `rmp_serde::to_vec_named` / `from_slice` are the encoder/decoder pair
# the Phase-4 shipper and the `stub-ingest` crate share. `serde` was
# already a transitive dep via `ext-php-rs`; we promote it to a direct
# dep so the wire derive isn't relying on a transitive supply chain.
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
# Phase 4 shipper channel; named in `SPECIFICATION.md` §1.4 OQ-5.
# `crossbeam_channel::bounded` is the bounded MPSC used between the
# recorder (producer, request thread) and the shipper (consumer, one
# background thread per process). `recv_deadline` is the API the
# MSHUTDOWN drain hinges on; `std::sync::mpsc` does not offer it
# ergonomically.
crossbeam-channel = "0.5"
# Phase 4 slice 3 (`shipper-encoder-and-http`): the HTTP client the
# shipper uses to POST encoded MessagePack batches to the configured
# `server_url`. `ureq` is blocking, single-thread-safe, and uses
# `rustls` natively — exactly the shape our dedicated shipper thread
# needs. `platform-verifier` uses the OS trust store (Linux: system CA
# bundle via `rustls-native-certs`-equivalent paths; cross-platform
# wrapper); it is the modern ureq-3.x replacement for wiring
# `rustls-native-certs` directly per `SPECIFICATION.md` §7.4. The
# slice's design.md D-6 and `COMMENTS.md` C-16 record the substitution.
ureq = { version = "=3.3.0", default-features = false, features = [
    "rustls",
    "platform-verifier",
] }
# `uuid` v7 timestamps the trace at flush time. The recorder side
# stores `[u8; 16]` (allocation-free); the shipper renders it to the
# 36-char hyphenated wire form via `Uuid::from_bytes(...).to_string()`
# inside `shipper::encode::encode_batch` exactly once per batch.
uuid = { version = "=1.18.1", features = ["v7"] }

[dev-dependencies]
# Used by the `auth_token_file` precedence tests in §4.6/§4.7/§4.8.
tempfile = "3"
# `rmpv` lets a handful of `wire::tests` hand-construct MessagePack maps
# (e.g. the forward-compat "extra unknown field" test) without writing a
# raw-bytes encoder by hand. It is *not* part of the production crate's
# closure — the Phase-4 shipper uses `rmp-serde` directly.
rmpv = "1"
# `serde_json` decodes the `/debug/batches` JSON response from
# `stub-ingest` in the Phase-4 slice-3 integration test
# (`tests/shipper_round_trip.rs`). The stub itself depends on
# `serde_json` to produce that JSON; we depend on it here to consume
# it. Not in the production closure — production uses MessagePack.
serde_json = "1"

[features]
# Diagnostic-only: enables a `recorder::dump` module that writes the
# discarded buffer at `RSHUTDOWN` to the path named by the
# `PHP_ANALYZE_DUMP_PATH` env var. Used exclusively by the slice-2
# integration tests under `tests/php-recorder/`. Default builds (no
# features) ship no dump code in the cdylib. The feature disappears in
# Phase 4 when the shipper replaces the discard with a `try_send`.
recorder-dump = []

[lints]
workspace = true
